examples/exploit-example/klee-out-0/test000001.exec.err
Error: invalid function pointer
File: test.c
Line: 42
assembly.ll line: 669
Stack: 
	#000000669 in __user_main (argc=1, argv=93279296) at test.c:42
	#100000388 in __uClibc_main (main=117818632, argc=1, argv=93279296, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at libc/misc/internals/__uClibc_main.c:401
	#200000563 in main (=1, =93279296)
